Bug 486734 - Crash after longer idle time from kmymoney
Summary: Crash after longer idle time from kmymoney
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: Online quotes widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-07 14:16 UTC by Ralf Habacker
Modified: 2024-05-07 14:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.2
Sentry Crash Report:


Attachments
backtrace (30.63 KB, text/vnd.kde.kcrash-report)
2024-05-07 14:16 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2024-05-07 14:16:45 UTC
Created attachment 169275 [details]
backtrace

STEPS TO REPRODUCE
1. build kmymoney from master branch 
2. start kmymoney
3. open a kmymoney file and let it open for a longer time

OBSERVED RESULT
kmymoney crashes

EXPECTED RESULT
kmymoney should not crash

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  openSUSE Leap 15.5
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
KMymoney Version:  5.1.80-3c372e367

ADDITIONAL INFORMATION
see appended backtrace
Comment 1 Ralf Habacker 2024-05-07 14:23:33 UTC
According to the backtrace 

#5 0x00007f3571958dca in QObjectPrivate::ConnectionData::removeConnection(QObjectPrivate::Connection*) (this=this@entry=0x555948e65f20, c=c@entry=0x5559493c3890) at kernel/qobject.cpp:357
#6 0x00007f357195b6bf in QObject::disconnect(QMetaObject::Connection const&) (connection=...) at kernel/qobject.cpp:5145
#7 0x00007f35735f27f1 in <lambda(const List&)>::operator()(const KNSCore::EntryInternal::List &) const (__closure=0x555948e65d10, entries=...) at /home/user/src/alkimia-master/src/alknewstuffengine.cpp:163

this problem arises in the alkimia library and happens at this point https://invent.kde.org/office/alkimia/-/blame/master/src/alknewstuffengine.cpp?ref_type=heads#L162
Comment 2 Ralf Habacker 2024-05-07 14:32:36 UTC
Git commit d59e08ba89858f72610966c22f673cd5616b8257 by Ralf Habacker.
Committed on 07/05/2024 at 14:32.
Pushed by habacker into branch 'master'.

Fix a possible crash in the NewStuffEngine class

When querying the installed remote online sources after a long runtime of
the application, a disconnect of the connection within the respective
slot leads to a crash.
FIXED-IN:8.2

M  +1    -3    src/alknewstuffengine.cpp

https://invent.kde.org/office/alkimia/-/commit/d59e08ba89858f72610966c22f673cd5616b8257