Fix a possible crash in the NewStuffEngine class

When querying the installed remote online sources after a long runtime of
the application, a disconnect of the connection within the respective
slot leads to a crash.

BUG:486734
FIXED-IN:8.2